<resources>
    <string name="app_name">OCPay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">SEND</string>
    <string name="address_copied_to_clipboard">Copied to Clipboard</string>
    <string name="copy_qr_code_address">Copy Wallet Address</string>
    <string name="activity_qr_code">Receipt QR code</string>
    <string name="activity_qr_share">Share</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="import_wallet_mnemonic">Mnemonic</string>
    <string name="import_wallet_official_wallet">Official</string>
    <string name="import_wallet_private_key">Private key</string>
    <string name="import_wallet_observed">Observed</string>
    <string name="activity_title_create_wallet">Create Your Wallet</string>
    <string name="start_import">Start Import</string>
    <string name="what_is_a_mnemonic">What is a Mnemonic?</string>
    <string name="hint_keystore_password">KeyStore Password</string>
    <string name="what_keystore">What is a Keystore ?</string>
    <string name="what_private_key">What is a Private Key ?</string>
    <string name="what_offline_signature">How to use cold wallet offline signature ?</string>
    <string name="hint_keystore">Keystore</string>
    <string name="hint_private_key">Please input your private key</string>
    <string name="hint_wallet_address">Wallet Address</string>
    <string name="note_about_cold_wallet">Note: A cold wallet with a signature is required to watch the wallet send the transaction. You can use another idle mobile phone, open the flight mode as a cold wallet, import the wallet private key, and cooperate with the offline signature.</string>
    <string name="note_about_observe_wallet">Observe the wallet does not need to import the private key, only import the wallet address for daily viewing of accounts, transactions and acceptance of notifications. The private key of large funds is recommended to use cold wallet or hardware wallet management to avoid disclosure of theft</string>
    <string name="action_next_step">Next step</string>
    <string name="action_confirm">Confirm</string>
    <string name="note_backup_confirm">Please click the mnemonic word in order to confirm your backup mnemonic words correctly.</string>
    <string name="fingerprint_login">Fingerprint login</string>
    <string name="create_your_ocpay">Create your OCPay</string>
    <string name="wallet_file_not_exists">Wallet File not exists</string>
    <string name="activity_wallet_manager">Wallet Manager</string>
    <string name="backup_wallet_tip_content_p1">Blockchain wallets are different from traditional website user accounts. </string>
    <string name="backup_wallet_tip_content_p2">Unlike traditional user accounts, lost passwords or private keys can not be recovered once lost.\n\nPlease use extreme caution will making backup copies of your wallets information.</string>
    <string name="backup_wallet_tip_content_p3">We highly suggest creating a wallet, and backing up the private keys and passwords, then testing the wallet with a small transaction first.</string>
    <string name="backup_wallet_mnemonic">Backup OCPay</string>
    <string name="wallet_detail">Wallet Detail</string>
    <string name="modify_current_password">Current Password</string>
    <string name="modify_new_password">New Password</string>
    <string name="modify_repeat_new_password">Repeat New Password</string>
    <string name="activity_modify_title">Change The Password</string>
    <string name="transfer_next_step">Next Step</string>
    <string name="activity_title_transaction_detail">Transaction Detail</string>
    <string name="activity_title_tx_query">Transaction Number Query</string>
    <string name="activity_transfer">Transfer</string>
    <string name="activity_system_settings">System Settings</string>
    <string name="activity_settings_language">Language</string>
    <string name="activity_settings_unit">Currency Unit</string>
    <string name="activity_currency_unit">Currency Unit</string>
    <string name="loading_tip_trading">Trading...</string>
    <string name="dialog_tx_detail_order_info">Order information</string>
    <string name="dialog_tx_detail_from">Transfer From</string>
    <string name="dialog_tx_detail_to">Transfer To</string>
    <string name="dialog_tx_detail_fee">Fee</string>
    <string name="dialog_tx_detail_amount">Amount</string>
    <string name="dialog_tx_detail_transfer">Transfer</string>
    <string name="unit_gwei">gwei</string>
    <string name="wallet_create_pwd_tip_weak">Weak</string>
    <string name="wallet_create_tip_great">Great</string>
    <string name="wallet_create_tip_good">Good</string>
    <string name="wallet_create_tip_so">So-so</string>
    <string name="wallet_create_tip_weak">@string/wallet_create_pwd_tip_weak</string>
    <string name="characters">characters</string>
    <string name="dialog_tip_name_token">The name is taken,please try another</string>
    <string name="btn_bottom_send">Send</string>
    <string name="btn_bottom_receive">Receive</string>
    <string name="tip_backup_content">The wallet is your blockchain account which is total different from websit/app account and account and it’s crytographic based.\n\nYou need to double check the wallet is being back properly in case of any assets loss.\n\nWe suggesr you backup mnemonic words and keystore both,then test with tiny ethers until you feel confidence.\n</string>
    <string name="create_gesture_default">set gesture password</string>
    <string name="create_gesture_reset">Reset gesture</string>
    <string name="create_gesture_correct">Set gesture password again</string>
    <string name="create_gesture_less_error">At least 4 point required</string>
    <string name="create_gesture_confirm_error">Not match,please draw it again</string>
    <string name="create_gesture_confirm_correct">Set Gesture Password Successful</string>
    <string name="gesture_default">@string/create_gesture_default</string>
    <string name="gesture_error">Invalid Password</string>
    <string name="gesture_correct">login successfully</string>
    <string name="ocpay_touch_id">OCPay Touch ID</string>
    <string name="fragment_title_export_keystore">Export Keystore</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="tip_operation_failure">operation failure</string>
    <string name="dialog_sign">Sign</string>
    <string name="dialog_sign_successfully">Sign successfully</string>
    <string name="sign_fail">Sign fail</string>
    <string name="tip_offline_sign">This is a Watch Wallet which need a Clod Wallet holding the private key to sign transation.See How does offline signing work?</string>
    <string name="tip_watching">Watching</string>
    <string name="activity_title_preview_transfer">Preview the transaction</string>
    <string name="tip_fee_detail">Gas(%s)*Gas Price(%s gwei)</string>
    <string name="tip_please_backup">Please Backup</string>
    <string name="activity_sign_detail">Sign Detail</string>
    <string name="action_create_your_ocpay">Create your OCPay</string>
    <string name="action_signin_your_ocpay">Sign your OCPay</string>
    <string name="activity_risk_assessment">Risk Assessment</string>
    <string name="action_learn_more">Learn More</string>
    <string name="action_create_your_wallet">Create your Wallet</string>
    <string name="risk_assessment_detail_content">Blockchain is a new technology that is decentralized, focuses on individual control of satay and assets, and features irreversible payments.

In this new world, your account wallet and private keys act as your digital passport, and OCPay does just that.

Without a basic understanding of Blockchain and wallet technology, users can make mistakes that can lead to loss of funds by mistake.

To ensure your ability and basic understanding of this new paradigm, we’ve implemented some basic tools of risk assessment meant to make sure our users are safe while using OCPay. </string>
    <string name="risk_assessment_detail_title">The Importance of Risk Assessment </string>
    <string name="activity_title_create_your_wallet">Create Your Wallet</string>
    <string name="create_wallet_tip_one">The password is used to protect your private key, it it very important to utilize a strong password. </string>
    <string name="create_wallet_tip_two">OCPay does not store passwords, and cannot help retrieve them. Please make sure to backup your password. </string>
    <string name="edit_hint_wallet_name">Wallet Name</string>
    <string name="edit_hint_password">Password</string>
    <string name="edit_hint_repeat_password">Repeat Password</string>
    <string name="edit_hint_password_hint_optional">Password Hint(Optional)</string>
    <string name="action_create_wallet">Create Wallet</string>
    <string name="tip_agreement_start">I have read and agreed to</string>
    <string name="tip_service_privacy">Service &amp; Privacy Policy</string>
    <string name="action_how_to_design_parameters">How to design parameters？</string>
    <string name="action_enable_mode">Enable advanced mode</string>
    <string name="action_turn_off_mode">Turn off advanced mode</string>
    <string name="tip_coming_soon">Coming Soon!</string>
    <string name="activity_about_us_content">Ocpay is a mobile light wallet app designed to provide ordinary users with a secure, easy-to-use and powerful digital asset wallet application.</string>
    <string name="activity_about_us">About Us</string>
    <string name="activity_about_us_use_agreement">Term of Use</string>
    <string name="activity_about_us_privacy_policy">Privacy Policy</string>
    <string name="activity_about_us_version_log">Version Log</string>
    <string name="activity_about_us_product_guide">Product Guide</string>
    <string name="activity_about_us_check_version">Check Version</string>
    <string name="tip_copyright">Copyright 2018 Odyssey \nAll right reserved</string>
    <string name="tip_notification_received_successfully">Received Successfully</string>
    <string name="tip_notification_sent_successfully">Sent Successfully</string>
    <string name="tip_notification_sent_failed_Sender">Sent Failed</string>
    <string name="notification_sender">Sender</string>
    <string name="notification_receiver">Receiver</string>
    <string name="ocp_official">OCPay</string>
    <string name="wallet_create_tip_require">At least 8 characters,includes uppercase and lowercase letters,digits. </string>
    <string name="tip_password_require">Password must be at at least 8 characters,includes uppercase and lowercase letters,digits. </string>
    <string name="tip_backup_mnemonic_words">Mnemonic Words</string>
    <string name="scan">SCAN</string>
    <string name="qrcode_scan">@string/scan</string>
    <string name="home_fragment_total_assets">TOTAL ASSETS(ETH)</string>
    <string name="bottom_bar_record">RECORD</string>
    <string name="bottom_bar_markets">MARKETS</string>
    <string name="bottom_bar_nearby">NEARBY</string>
    <string name="bottom_bar_airdrop">AIRDROP</string>
    <string name="bottom_bar_me">ME</string>
    <string name="bottom_bar_home">HOME</string>
    <string name="nav_bar_create_wallet">Create Wallet</string>
    <string name="fragment_title_markets">Markets</string>
    <string name="fragment_title_airdrop">Airdrop</string>
    <string name="fragment_title_nearby">Nearby</string>
    <string name="settings_message_center">Message Center</string>
    <string name="tip_contact_us_description">Enter a description of the problem. If necessary, please cooperate with the picture</string>
    <string name="tip_contact_us_email">Email</string>
    <string name="tip_contact_us_theme">Theme</string>
    <string name="tip_search_none">Not find related results</string>
    <string name="activity_login_login">Login</string>
    <string name="tip_follow_login">The favorite will occur after login</string>
</resources>