<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/color_concrete_background">

            <EditText
                android:id="@+id/et_private_key"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:background="@color/white"
                android:gravity="top"
                android:hint="@string/hint_private_key"
                android:padding="12dp"
                android:textAlignment="gravity"
                android:textColor="@color/color_text_main"
                android:textColorHint="@color/color_edit_hint"
                android:textDirection="firstStrong"
                android:textSize="14sp" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/edit_hint_password"
                android:inputType="textPassword"
                android:paddingBottom="14dp"
                android:paddingTop="20dp"
                android:textColor="@color/color_text_main"
                android:textColorHint="@color/color_edit_hint"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_pwd_lv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/wallet_create_pwd_tip_weak"
                android:textColor="@color/color_edit_tip_red"
                android:textSize="14sp"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/iv_pwd_lv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="7dp"
                android:src="@mipmap/ic_pwd_null"
                android:visibility="invisible" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@color/color_item_line" />


        <TextView
            android:id="@+id/tv_pwd_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="3dp"
            android:gravity="right"
            android:text="@string/wallet_create_tip_require"
            android:textColor="@color/color_edit_tip_red"
            android:textSize="9sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_check_pwd"
            style="@style/WalletImportEditView"
            android:hint="@string/edit_hint_repeat_password" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@color/color_item_line" />

        <EditText
            android:id="@+id/et_pwd_tip"
            style="@style/WalletImportEditView"
            android:hint="@string/edit_hint_password_hint_optional"
            android:inputType="text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@color/color_item_line" />

        <include
            android:id="@+id/include"
            layout="@layout/layout_privacy_policy" />


        <TextView
            android:id="@+id/tv_action_import"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/shape_btn_grave"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/start_import"
            android:textAllCaps="false"
            android:textColor="#A4AFB4"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_about_private_key"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/what_private_key"
            android:textAllCaps="false"
            android:textColor="#FF38525F"
            android:textSize="13sp" />
    </LinearLayout>

</layout>

