<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context=".activities.WalletCreateActivity">


        <include
            android:id="@+id/include_action_bar"
            layout="@layout/layout_action_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#FF38525F"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="4dp"
                    android:layout_height="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shape_circle_gray" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_wallet_tip_one"
                    android:textColor="#FFA4AFB4"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="9dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="4dp"
                    android:layout_height="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shape_circle_gray" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_wallet_tip_two"
                    android:textColor="#FFA4AFB4"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>


        <EditText
            android:id="@+id/et_wallet_name"
            style="@style/WalletImportEditView"
            android:hint="@string/edit_hint_wallet_name"
            android:inputType="text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@color/color_item_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/et_wallet_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/edit_hint_password"
                android:inputType="textPassword"
                android:paddingBottom="14dp"
                android:paddingTop="20dp"
                android:textColor="@color/color_text_main"
                android:textColorHint="@color/color_edit_hint"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_pwd_lv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/wallet_create_pwd_tip_weak"
                android:textColor="@color/color_edit_tip_red"
                android:textSize="14sp"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/iv_pwd_lv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="7dp"
                android:src="@mipmap/ic_pwd_null"
                android:visibility="invisible" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@color/color_item_line" />


        <TextView
            android:id="@+id/tv_pwd_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="3dp"
            android:gravity="right"
            android:text="@string/wallet_create_tip_require"
            android:textColor="@color/color_edit_tip_red"
            android:textSize="9sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_wallet_check_pwd"
            style="@style/WalletImportEditView"
            android:hint="@string/edit_hint_repeat_password" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@color/color_item_line" />

        <EditText
            android:id="@+id/et_wallet_pwd_tp"
            style="@style/WalletImportEditView"
            android:hint="@string/edit_hint_password_hint_optional"
            android:inputType="text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@color/color_item_line" />

        <include
            android:id="@+id/include_privacy"
            layout="@layout/layout_privacy_policy" />


        <TextView
            android:id="@+id/tv_generate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_btn_grave"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/action_create_wallet"
            android:textAllCaps="false"
            android:textColor="#A4AFB4"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_import_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/import_wallet"
            android:textAllCaps="false"
            android:textColor="#FF38525F"
            android:textSize="13sp" />


    </LinearLayout>


</layout>
